--- a/scss/_site-blocks.scss
+++ b/scss/_site-blocks.scss
@@ -1194,7 +1194,7 @@
 			content: "";
 			position: absolute;
 			top: 0; left: 0; right: 0; bottom: 0;
-			background:rgba($primary, .9);
+			background: #c0c5a3;
 			z-index: 2;
 		}
 	}
