--- a/scss/_site-base.scss
+++ b/scss/_site-base.scss
@@ -11,8 +11,9 @@ body {
 	font-family: $font-family-sans-serif;
 }
 
-.custom-green {
-	background-color: #e7ead7 !important;
+.button-yayoga {
+	background-color: #c0c5a3 !important;
+	border-color: #c0c5a3 !important;
 }
 
 ::-moz-selection { 
