--- a/scss/style.css
+++ b/scss/style.css
@@ -7,8 +7,9 @@ body {
   font-family: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.custom-green {
-  background-color: #e7ead7 !important;
+.button-yayoga {
+  background-color: #c0c5a3 !important;
+  border-color: #c0c5a3 !important;
 }
 
 ::-moz-selection {
@@ -1911,7 +1912,7 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(135, 229, 218, 0.9);
+  background: #c0c5a3;
   z-index: 2;
 }
 
