--- a/scss/style.css
+++ b/scss/style.css
@@ -1950,4 +1950,86 @@ a:hover {
 .pricing .btn.pill {
   border-radius: 30px;
 }
+
+[data-toggle="collapse"] i:before {
+  content: "\f068";
+}
+
+[data-toggle="collapse"].collapsed i:before {
+  content: "\f067";
+}
+
+#accordion .card-header {
+  margin-bottom: 8px;
+}
+
+#accordion .accordion-title {
+  position: relative;
+  display: block;
+  padding: 16px 0 16px 50px;
+  background: #abb18b;
+  border-radius: 8px;
+  overflow: hidden;
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  width: 100%;
+  text-align: left;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  font-size: 1.25rem;
+}
+
+#accordion .accordion-title i {
+  position: absolute;
+  width: 40px;
+  height: 100%;
+  left: 0;
+  top: 0;
+  color: #fff;
+  background: radial-gradient(rgba(171, 177, 139, 0.8), #abb18b);
+  text-align: center;
+  border-right: 1px solid transparent;
+}
+
+#accordion .accordion-title:hover {
+  padding-left: 60px;
+  background: #abb18b;
+  color: #fff;
+}
+
+#accordion .accordion-title:hover i {
+  border-right: 1px solid #fff;
+}
+
+#accordion .accordion-body {
+  padding: 40px 55px;
+}
+
+#accordion .accordion-body ul {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+}
+
+#accordion .accordion-body li {
+  padding-left: 1.2rem;
+  text-indent: -1.2rem;
+}
+
+#accordion .accordion-body li:before {
+  content: "\f10a";
+  padding-right: 5px;
+  font-family: "Flaticon";
+  font-size: 16px;
+  font-style: normal;
+  color: #abb18b;
+}
+
+@media (max-width: 768px) {
+  #accordion .accordion-body {
+    padding: 15px 15px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
