--- a/scss/_site-navbar.scss
+++ b/scss/_site-navbar.scss
@@ -227,7 +227,7 @@
 						}
 						&.active {
 							> a {
-								color: $primary!important;
+								color: #c0c5a3 !important;
 							}
 						}
 					}
