--- a/scss/style.css
+++ b/scss/style.css
@@ -1966,7 +1966,7 @@ a:hover {
 #accordion .accordion-title {
   position: relative;
   display: block;
-  padding: 16px 0 16px 50px;
+  padding: 14px 10px 14px 42px;
   background: #abb18b;
   border-radius: 8px;
   overflow: hidden;
@@ -1979,6 +1979,7 @@ a:hover {
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
   font-size: 1.25rem;
+  white-space: normal;
 }
 
 #accordion .accordion-title i {
